turn urls into urls

--- a/writeups/icra12/misc.bib
+++ b/writeups/icra12/misc.bib
@@ -61,7 +61,7 @@
 @misc{Doria2009,
   Author	= "D. Doria",
   Title		= "A Synthetic LiDAR Scanner for VTK",
-  howpublished		= "http://hdl.handle.net/10380/3125",
+  howpublished		= {\url{http://hdl.handle.net/10380/3125}},
   Year		= {2009},
   Month		= {09},
   Keywords	= "LiDAR, Synthetic Scanner, 3d model",
@@ -160,5 +160,5 @@ ISSN={},}
 @misc{wgdb,
   author = {Matei Ciocarlie},
   title = {Household Objects Database},
-  url = {http://www.ros.org/wiki/household_objects_database}
+  howpublished = {\url{http://www.ros.org/wiki/household_objects_database}},
 }
