move bibliography to separate page

--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -135,6 +135,7 @@ more comprehensive detection/evaluation mechanisms for ``global'' descriptors.
 % 
 % The authors gratefully acknowledge the contribution of National Research Organization and reviewers' comments.
 
+\pagebreak
 {\small
 \bibliographystyle{ieee}
 \bibliography{sergeyk-icra12,misc}
