--- a/writeups/icra12/architecture.tex
+++ b/writeups/icra12/architecture.tex
@@ -5,7 +5,7 @@ The stock detection algorithm relies heavily PCL, which does all of the lower le
 We use the Princeton Shape Benchmark.
 Since the dataset contains polygonal representations, the framework uses simulated lidar scanning to create point clouds. We use SyntheticLidarScanner~\cite{Doria2009}, which provides a feature-rich utility which allows us to control the point cloud resolution and noisiness.
 
-Our evaluation framework has two major parts. First is the Detector class, which houses the detection logic. Second is the Proctor class, which generates tests and reports. These illustrated in \autoref{fig:arch}.
+Our evaluation framework has two major parts. First is the Detector class, which houses the detection logic. Second is the Proctor class, which generates tests and reports. These are illustrated in \autoref{fig:arch}.
 
 \begin{figure}[thpb]
   \centering
