nicer timing figure

--- a/writeups/icra12/evaluation.tex
+++ b/writeups/icra12/evaluation.tex
@@ -53,8 +53,7 @@ Timing information is crucial when selecting which feature to use for a task: a 
 
 \begin{figure*}[thpb]
 \centering
-\subfloat[Total time spent in training.]{\includegraphics[width=0.45\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_train_total.png}}
-\subfloat[Total time spent in testing.]{\includegraphics[width=0.45\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_test_total.png}} \\
+\subfloat[Total time spent in training and testing phases of the pipeline.]{\includegraphics[width=0.95\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_timing_overview.png}} \\
 \vspace{1em}
 \subfloat[Breakdown of where time is spent in the testing phase.]{\includegraphics[width=0.95\linewidth]{../figures/PSB/PFH-FPFH-SHOT-SPIN_IMAGE_timing_test_panel.png}} 
 \caption{Timing results on the Princeton Shape Benchmark dataset.}
@@ -70,8 +69,7 @@ In this paper, in all cases, the tests were run on a 2.50 GHz Intel Core2 Quad Q
 
 \begin{figure*}[thpb]
 \centering
-\subfloat[Total time spent in training.]{\includegraphics[width=0.45\linewidth]{../figures/WGDB/PFH-FPFH-SHOT-SPIN_IMAGE_train_total.png}}
-\subfloat[Total time spent in testing.]{\includegraphics[width=0.45\linewidth]{../figures/WGDB/PFH-FPFH-SHOT-SPIN_IMAGE_test_total.png}} \\
+\subfloat[[Total time spent in training and testing phases of the pipeline.]{\includegraphics[width=0.95\linewidth]{../figures/WGDB/PFH-FPFH-SHOT-SPIN_IMAGE_timing_overview.png}}
 \vspace{1em}
 \subfloat[Breakdown of where time is spent in the testing phase.]{\includegraphics[width=0.95\linewidth]{../figures/WGDB/PFH-FPFH-SHOT-SPIN_IMAGE_timing_test_panel.png}} 
 \caption{Timing results on the Willow Garage Grasping dataset.}
