alterations to dataset introduction

--- a/writeups/icra12/intro_and_related_work.tex
+++ b/writeups/icra12/intro_and_related_work.tex
@@ -88,10 +88,9 @@ Their method relies on high-level features derived from the 3D observation such 
 %Finally, \cite{leibe10ijrr} explores pedestrian detection by using stereo and temporal information in a hough voting framework also using scene constraints.
 
 \subsection{Datasets}
-\note{some is lifted from B3DO paper}
-
-An evaluation of a method is only as meaningful as the underlying dataset.
-There are a number of available dataset for 3-D recognition, varying in size, content (3D only or with 2D views), labels (pose, instance, category, or some combination of these), and source (controlled capture or ``in the wild'').
+Any evaluation of a recognition algorithm depends on an appropriate dataset.
+A variety of datasets are available for 3-D recognition.
+They have different size, content (3D only or with 2D views), labels (pose, instance, category, or some combination of these), and source (controlled capture or ``in the wild'').
 Here we summarize the most appropriate datasets for our generalized evaluation framework.
 
 \subsubsection{3D Data Only}
