--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -115,8 +115,9 @@ This paper describes the motivation for a standard 3-D recognition pipeline
 evaluation framework and explains our choices for the particular components of
 our implementation.
 
-We hope that future work in 3-D feature detection, description, or subsequent
-recognition or pose estimation mechanisms will base itself on this framework.
+We hope that future work in 3-D feature detections, description,
+or subsequent recognition or pose estimation mechanisms will benefit
+from this framework.
 The project of a general, modular 3-D preception evaluation framework is
 tremendous, and would benefit from code and testing contributions as much as its
 existence benefits researchers in these areas.
@@ -135,7 +136,6 @@ more comprehensive detection/evaluation mechanisms for ``global'' descriptors.
 % 
 % The authors gratefully acknowledge the contribution of National Research Organization and reviewers' comments.
 
-\pagebreak
 {\small
 \bibliographystyle{ieee}
 \bibliography{sergeyk-icra12,misc}
