--- a/writeups/icra12/misc.bib
+++ b/writeups/icra12/misc.bib
@@ -162,3 +162,21 @@ ISSN={},}
   title = {Household Objects Database},
   howpublished = {\url{http://www.ros.org/wiki/household_objects_database}},
 }
+
+@Article{BeslMcKay,
+  author    = {Paul J. Besl and Neil D. McKay},
+  title     = {{A Method for Registration of 3-D Shapes}},
+  journal   = {IEEE Trans. Pattern Anal. Mach. Intell.},
+  volume    = {14},
+  year      = {1992},
+  issn      = {0162-8828},
+}
+@Conference{FLANN,
+  author    = {Marius Muja and David G. Lowe},
+  title     = {{Fast Approximate Nearest Neighbors with Automatic Algorithm Configuration}},
+  booktitle = {Proceedings of the International Conference on Computer Vision Theory and Applications (VISAPP)},
+  month     = {February 5-8},
+  year      = {2009},
+  address   = {Lisbon, Portugal},
+}
+
