--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -50,7 +50,7 @@ Proctor: Evaluating 3-D Recognition
 %         {\tt\small pmisra@cs.wright.edu}}
 %}
 
-\author{Warren He, Sergey Karayev, Trevor Darrell, Radu Rusu, Pieter
+\author{Warren He, Sergey Karayev, Trevor Darrell, Radu B. Rusu, Pieter
   Abbeel}
 
 %\author{Some people% <-this % stops a space
