Warren and I uncovered a small bug in how the AUCR was computed in the output logs; we fixed it by replacing with inferred values (within ~1% correspondence); regenerated figures with new colors

--- a/writeups/results/WGDB_PFH-FPFH-SHOT-SPIN_IMAGE_table.tex
+++ b/writeups/results/WGDB_PFH-FPFH-SHOT-SPIN_IMAGE_table.tex
@@ -5,6 +5,6 @@ Metric & PFH & FPFH & SHOT & Spin \\
  \% Correct & 41.25 & \bf 81.25 & 71.25 & 28.21 \\
 AP & 0.26 & \bf 0.75 & 0.58 & 0.20 \\
 Avg. Rank & 4.26 & 2.58 & 2.56 & \bf 1.86 \\
-AUH & 0.59 & 0.80 & 0.80 & \bf 0.92 \\
+AUCR & 0.66 & 0.83 & \bf 0.83 & 0.67 \\
 \hline
 \end{tabular}
