--- a/writeups/results/PSB_PFH-FPFH-SHOT-SPIN_IMAGE_table.tex
+++ b/writeups/results/PSB_PFH-FPFH-SHOT-SPIN_IMAGE_table.tex
@@ -5,6 +5,6 @@ Metric & PFH & FPFH & SHOT & Spin \\
  \% Correct & 86.25 & \bf 87.50 & 73.75 & 49.35 \\
 AP & 0.85 & \bf 0.86 & 0.64 & 0.31 \\
 Avg. Rank & 2.25 & \bf 2.16 & 2.30 & 3.96 \\
-AUH & 0.84 & \bf 0.85 & 0.84 & 0.65 \\
+AUCR & 0.85 & \bf 0.85 & 0.85 & 0.65 \\
 \hline
 \end{tabular}
