--- a/writeups/icra12/architecture.tex
+++ b/writeups/icra12/architecture.tex
@@ -36,7 +36,8 @@ During testing, the stock implementation starts the same way as training: it use
 For each keypoint in the query scene, the implementation searches the KdTree built during training for the four nearest neighbors in feature space. Each of these results contributes a vote for the corresponding model, weighted by the reciprocal of the $L^2$ distance between the scene feature vector and the model feature vector.
 The implementation then tries to register the query with the four candidate models that have the greatest total votes.
 This is done by first using the initial alignment algorithm described in section IV of the FPFH paper, then, running a few iterations of ICP.
-A screenshot of the visualization provided by the stock detector is provided in \autoref{fig:vis}.
+
+A screenshot of the visualization provided by the stock detector is provided in \autoref{fig:vis}. The query scene is drawn in white, and the classifier's top four candidate models are shown in red. While the voting classifier is partial to the Parthenon model, registration reveals that the scene is geometrically consistent with the spider.
 \begin{figure}[thpb]
   \centering
   \includegraphics[width=\columnwidth]{../figures/visualization.png}
