--- a/writeups/results/WGDB_PFH-FPFH-SHOT-SPIN_IMAGE_table.tex
+++ b/writeups/results/WGDB_PFH-FPFH-SHOT-SPIN_IMAGE_table.tex
@@ -4,7 +4,7 @@ Metric & PFH & FPFH & SHOT & Spin \\
 \hline
  \% Correct & 41.25 & \bf 81.25 & 71.25 & 28.21 \\
 AP & 0.26 & \bf 0.75 & 0.58 & 0.20 \\
-Avg. Rank & 4.26 & 2.58 & 2.56 & \bf 1.86 \\
+Avg. Rank & 3.70 & 2.39 & \bf 2.33 & 3.39 \\
 AUCR & 0.66 & 0.83 & \bf 0.83 & 0.67 \\
 \hline
 \end{tabular}
