--- a/writeups/icra12/report.tex
+++ b/writeups/icra12/report.tex
@@ -72,15 +72,15 @@ Proctor: Evaluating 3-D Recognition
 \begin{abstract}
 
 
-Until recently, the field of 3D perception was a niche domain. With the advent
-of inexpensive and accurate 3D imaging sensors, there has been an explosion of
-interest in 3D point clouds across a broad range of researchers and application
+Until recently, the field of 3-D perception was a niche domain. With the advent
+of inexpensive and accurate 3-D imaging sensors, there has been an explosion of
+interest in 3-D point clouds across a broad range of researchers and application
 developers. In the past few years, various research fields have developed
-many different feature representations that operate in 3D geometry spaces, but
+many different feature representations that operate in 3-D geometry spaces, but
 no unified evaluation has ever been performed due to a poor intersection between
 these burgeoning communities.
 
-In this paper we present a comprehensive evaluation framework for 3D point
+In this paper we present a comprehensive evaluation framework for 3-D point
 cloud-based recognition: Proctor.
 The framework is designed to automatically test large ranges of
 parameters and estimate several metrics that can be automatically included in
