--- a/writeups/icra12/evaluation.tex
+++ b/writeups/icra12/evaluation.tex
@@ -56,11 +56,10 @@ We evaluate the correctness of our results via the following scalar values
 These scalar metrics, in table form, form one part of our Accuracy Dashboard, seen in~\autoref{fig:PSB_dashboard} for the Princeton Shape Benchmark.
 The idea of the Dashboard is that each run of Proctor generates this complete set of results, all available in one place.
 Proctor outputs all figures and data for the dashboard, and generates an HTML page and a PDF document tying them together.
-In fact, Figures \ref{fig:PSB_dashboard} and \ref{fig:WGDB_dashboard} are examples of such
-automatically generated documents---we simply inserted it into this
-paper's source.
+In fact, all following figures and tables are examples of such
+automatically generated documents.
 
-In addition to the scalar metrics, which are useful for a summary comparison of different features or algorithms, the Dashboard provides visualization of three things:
+In addition to the scalar metrics, which are useful for a summary comparison of different features or algorithms, the Dashboard provides three visualization:
 \begin{itemize}
   \item For each feature, the confusion matrix between final results. This can be a useful tool to understand the behavior of the detector and a source of information for tuning the approach.
   \item Precision-Recall curves comparing all features. It is valuable to know whether a feature results in High-Precision, Low-Recall performance (such as requested by the Solutions in Perception Challenge \cite{SIPC2011}) or Low-Precision, High-Recall performance. By itself, the AP does not provide this information.
